--- a/public/assets/css/skins/theme-bluelite.css
+++ b/public/assets/css/skins/theme-bluelite.css
@@ -1,10 +1,28 @@
 /*!
- * Theme: Green
+ * Theme: BlueLite
  * Package: DashLite v3.2.2
  * Updated: 08.22.2023
  * Author: Softnio
  * Author URI: http://themeforest.net/user/softnio
 **/
+.nk-sidebar.is-dark {
+  background: #0f192a;
+  border-right-color: #1c2f50;
+}
+.nk-sidebar.is-theme {
+  background: #29347a;
+  border-right-color: #3644a0;
+}
+.is-dark .nk-sidebar-head {
+  border-color: #1c2f50;
+}
+.is-theme .nk-sidebar-head {
+  border-color: #3644a0;
+}
+.nk-sidebar.is-dark .user-balance-alt, .nk-sidebar.is-theme .user-balance-alt {
+  color: rgba(255, 255, 255, 0.8);
+}
+
 .nk-header {
   background: #f5f6fa;
   border-bottom-color: #e5e9f2;
@@ -13,34 +31,31 @@
   background: #0f192a;
 }
 .nk-header.is-theme:not([class*=bg-]) {
-  background: #064936;
+  background: #29347a;
 }
 
 .is-dark .nk-menu-link {
   color: #8699b2;
 }
+.is-dark .nk-menu-link:hover {
+  background: #172641;
+}
+.is-dark .active > .nk-menu-link {
+  background: #172641;
+}
 .is-dark .nk-menu-icon {
   color: #9faec2;
 }
 .is-dark .nk-menu-badge {
-  color: #34edba;
+  color: #cbd1ff;
   background: #1c2f50;
 }
 .is-dark .nk-menu-sub .active > .nk-menu-link,
 .is-dark .nk-menu-link:hover, .is-dark .active > .nk-menu-link,
 .is-dark .nk-menu-link:hover .nk-menu-icon, .is-dark .nk-menu-item.active > .nk-menu-link .nk-menu-icon, .is-dark .nk-menu-item.current-menu > .nk-menu-link .nk-menu-icon {
-  color: #13dba4;
+  color: #98a3ff;
 }
-.is-dark .nk-news-icon .icon {
-  color: #0fac81;
-}
-.is-dark .nk-news-text .icon {
-  color: #8094ae;
-}
-.is-dark .nk-news-text p span {
-  color: rgba(128, 148, 174, 0.9);
-}
-.is-dark .user-name, .is-dark .nk-news-text p {
+.is-dark .user-name {
   color: #90a1b8;
 }
 .is-dark .nk-quick-nav-icon {
@@ -48,26 +63,29 @@
 }
 
 .is-theme .nk-menu-link {
-  color: #a3dfcf;
+  color: #bac6fe;
+}
+.is-theme .nk-menu-link:hover {
+  background: #313d91;
+}
+.is-theme .active > .nk-menu-link {
+  background: #313d91;
 }
 .is-theme .nk-menu-icon {
-  color: #c2eadf;
+  color: #e2e7ff;
 }
 .is-theme .nk-menu-badge {
-  color: #63f1ca;
-  background: #0a7859;
+  color: #fefeff;
+  background: #3644a0;
 }
-.is-theme .nk-news-icon .icon {
-  color: #1cebb3;
+.is-theme .nk-quick-nav-icon, .is-theme .overline-title {
+  color: #c4cefe;
 }
-.is-theme .nk-news-text .icon, .is-theme .nk-quick-nav-icon, .is-theme .overline-title {
-  color: #abe2d3;
+.is-theme .nk-menu-heading .overline-title {
+  color: rgba(196, 206, 254, 0.8);
 }
-.is-theme .nk-news-text p span, .is-theme .nk-menu-heading .overline-title {
-  color: rgba(171, 226, 211, 0.8);
-}
-.is-theme .user-name, .is-theme .nk-news-text p {
-  color: #bee9dd;
+.is-theme .user-name {
+  color: #dde3fe;
 }
 
 .card-tools-nav li a:before,
@@ -77,28 +95,26 @@
 .bg-primary,
 .icon-circle,
 .noUi-connect,
-.nk-kycfm-label::after,
-.plan-item-card:after,
 .nk-msg-menu-item a:after,
 .ui-shady .nk-msg-item.active:after, .ui-shady .nk-msg-item.current:after,
 .ui-softy .nk-msg-item.active:after, .ui-softy .nk-msg-item.current:after {
-  background: #0fac81;
+  background: #6576ff;
 }
 
 .card-bordered.is-dark {
-  border-color: #07523d;
+  border-color: #2c3782;
 }
 
 .card.is-dark {
-  background: #07523d;
+  background: #2c3782;
+}
+
+.is-dark .nk-wg7-title, .is-dark .nk-wg7-note {
+  color: #c4cefe;
 }
 
 .user-avatar, [class^=user-avatar]:not([class*=-group]) {
-  background: #13dba4;
-}
-
-.nk-news-item:hover .nk-news-text .icon {
-  color: #13dba4;
+  background: #98a3ff;
 }
 
 .nk-menu-link:hover,
@@ -108,6 +124,7 @@
 .nk-menu-link:hover .count,
 .nk-menu-sub .nk-menu-link:hover,
 .nk-menu-sub .active > .nk-menu-link,
+.nk-menu-sm .nk-menu-link:hover,
 .nk-menu-main .nk-menu-link:hover,
 .nk-menu-main .nk-menu-link:focus,
 .nk-menu-main .nk-menu-item.active > .nk-menu-link,
@@ -149,11 +166,6 @@
 .form-clip,
 .form-text-hint,
 .search-submit:hover,
-.nk-news-icon .icon,
-.nk-refwg-name .title,
-.nk-iv-wg1-info, .nk-wg4-note span,
-.nk-iv-scheme-item .amount-ex,
-.nk-kycfm-control:checked ~ .nk-kycfm-label .label-icon,
 .attach-item .icon,
 .attach-download:hover span,
 .nk-reply-meta-info .whom,
@@ -161,34 +173,32 @@
 .nk-msg-menu-item a:hover,
 .nk-msg-menu-item.active a,
 .user-balance,
-.user-avatar[class*=-primary-dim],
-.nk-order-ovwg-data.sell .amount,
-.nk-order-ovwg-data.sell .title .icon,
-.nk-wg-action-content p strong, a,
+.user-avatar[class*=-primary-dim], a,
 .dropzone .dz-message-text span,
 .nk-switch-icon.active,
 .link-list-plain a .icon,
 .chat-upload-option a,
 .is-unread .chat-context .status,
 .add-opt:hover .sub-text, .add-opt:hover .icon,
-.icon[class*=bg-primary-dim] {
-  color: #0fac81;
+.icon[class*=bg-primary-dim],
+.nk-tb-list .tb-asterisk a {
+  color: #6576ff;
 }
 
 a:hover {
-  color: #0c8665;
+  color: #3c52ff;
 }
 
 .text-primary, .link-primary {
-  color: #0fac81 !important;
+  color: #6576ff !important;
 }
 
 .link-primary:hover, a.text-primary:hover, a.text-primary:focus, .chat-upload-option a:hover {
-  color: #0c8665 !important;
+  color: #3c52ff !important;
 }
 
 .border-primary, .nk-kycfm-control:checked ~ .nk-kycfm-label {
-  border-color: #0fac81 !important;
+  border-color: #6576ff !important;
 }
 
 .bg-lighter {
@@ -196,66 +206,66 @@ a:hover {
 }
 
 .bg-primary {
-  background-color: #0fac81 !important;
+  background-color: #6576ff !important;
 }
 
 a.bg-primary:hover, a.bg-primary:focus, button.bg-primary:hover, button.bg-primary:focus {
-  background-color: #0b7d5e !important;
+  background-color: #3249ff !important;
 }
 
 .bg-primary-dim {
-  background-color: #e7f7f2 !important;
+  background-color: #f0f1ff !important;
 }
 
 .text-primary-dim {
-  color: #e7f7f2 !important;
+  color: #f0f1ff !important;
 }
 
 .alert-primary, .badge-dim.bg-outline-primary {
-  background-color: #e7f7f2;
-  border-color: #9fdecd;
+  background-color: #f0f1ff;
+  border-color: #c1c8ff;
 }
 
 .alert-pro.alert-primary, .bg-primary,
+.sp-package-choose:checked ~ label,
 .plan-control:checked + .plan-item-card,
 .form-control:focus,
 .form-control.focus,
-.form-file-input:focus ~ .form-file-label,
+.custom-file-input:focus ~ .custom-file-label,
 .custom-control-input:focus:not(:checked) ~ .custom-control-label::before,
 .select2-container--default .select2-selection--single:focus,
 .select2-container--default.select2-container--focus .select2-selection--multiple {
-  border-color: #0fac81;
+  border-color: #6576ff;
 }
 
 .nk-order-ovwg-data.sell, .bg-outline-primary {
-  border-color: #9fdecd;
+  border-color: #c1c8ff;
 }
 
 .dropdown-menu-s1 {
-  border-top-color: #0fac81;
+  border-top-color: #6576ff;
 }
 
 .nk-iv-wg2-amount.ui-v2 {
-  border-bottom-color: #0fac81;
+  border-bottom-color: #6576ff;
 }
 
 .page-item.active .page-link,
-.plan-control:checked + .plan-item-card .plan-label,
 .custom-control-input:checked ~ .custom-control-label::before,
 .custom-control-input:not(:disabled):active ~ .custom-control-label::before {
-  background-color: #0fac81;
-  border-color: #0fac81;
+  background-color: #6576ff;
+  border-color: #6576ff;
 }
 
 .custom-checkbox .custom-control-input:disabled:checked ~ .custom-control-label::before,
 .custom-radio .custom-control-input:disabled:checked ~ .custom-control-label::before,
 .custom-switch .custom-control-input:disabled:checked ~ .custom-control-label::before {
-  background-color: #6fcdb3;
+  background-color: #a3adff;
 }
 
 .badge-dim.bg-primary {
-  background-color: #e7f7f2;
-  border-color: #e7f7f2;
+  background-color: #f0f1ff;
+  border-color: #f0f1ff;
 }
 
 .bg-primary.badge-dot {
@@ -263,74 +273,66 @@ a.bg-primary:hover, a.bg-primary:focus, button.bg-primary:hover, button.bg-prima
 }
 
 .nk-error-head {
-  background: -webkit-linear-gradient(#0fac81, #0b8160);
+  background: -webkit-linear-gradient(#6576ff, #3947a8);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
 
 .nav-switch .nav-link.active {
-  background: #0fac81;
+  background: #6576ff;
   color: #ffffff;
 }
 
-.icon-avatar, .nk-iv-scheme-icon.is-running {
-  color: #0fac81;
-  background-color: #dbf3ec;
-}
-
-.is-dark .nk-wgw-icon {
-  background: #3fbd9a;
-}
-
-.is-dark .nk-iv-wg2-title .title {
-  color: #abe2d3;
+.icon-avatar {
+  color: #6576ff;
+  background-color: #e8eaff;
 }
 
 .is-theme .nk-quick-nav-icon:before {
-  background-color: #03231a;
+  background-color: #1f275c;
 }
 
 .btn-primary {
-  background-color: #0fac81;
-  border-color: #0fac81;
+  background-color: #6576ff;
+  border-color: #6576ff;
 }
 .btn-primary:hover {
-  background-color: #0d9973;
-  border-color: #0d906c;
+  background-color: #5164ff;
+  border-color: #465bff;
 }
 .btn-primary:focus {
-  background-color: #0d9973;
-  border-color: #0d906c;
+  background-color: #5164ff;
+  border-color: #465bff;
 }
 .btn-primary.btn-dim {
-  color: #0fac81;
-  background-color: #e5f6f1;
-  border-color: #e5f6f1;
+  color: #6576ff;
+  background-color: #eef0ff;
+  border-color: #eef0ff;
 }
 
 .btn-dim.btn-outline-primary {
-  color: #0fac81;
-  background-color: #e5f6f1;
-  border-color: #9fdecd;
+  color: #6576ff;
+  background-color: #eef0ff;
+  border-color: #c1c8ff;
 }
 .btn-dim.btn-outline-primary.btn-white {
   background-color: #ffffff;
 }
 
 .btn-outline-primary {
-  border-color: #0fac81;
-  color: #0fac81;
+  border-color: #6576ff;
+  color: #6576ff;
 }
 .btn-outline-primary:hover {
-  background-color: #0fac81;
-  border-color: #0fac81;
+  background-color: #6576ff;
+  border-color: #6576ff;
 }
 
 .btn-primary:not(:disabled):not(.disabled):active,
 .btn-primary:not(:disabled):not(.disabled).active,
 .show > .btn-primary.dropdown-toggle {
-  background-color: #0e9e76;
-  border-color: #0d9973;
+  background-color: #5668ff;
+  border-color: #5164ff;
 }
 
 .btn-primary:focus,
@@ -350,7 +352,7 @@ a.bg-primary:hover, a.bg-primary:focus, button.bg-primary:hover, button.bg-prima
 .btn-outline-primary:not(:disabled):not(.disabled).active:focus,
 .show > .btn-outline-primary.dropdown-toggle,
 .show > .btn-outline-primary.dropdown-toggle:focus {
-  box-shadow: 0 0 0 0.2rem rgba(15, 172, 129, 0.2);
+  box-shadow: 0 0 0 0.2rem rgba(101, 118, 255, 0.2);
 }
 
 .btn-outline-light:focus, .btn-outline-light.focus,
@@ -366,10 +368,10 @@ a.bg-primary:hover, a.bg-primary:focus, button.bg-primary:hover, button.bg-prima
 
 .form-control:focus, .form-control.focus,
 .custom-control-input:focus ~ .custom-control-label::before,
-.form-file-input:focus ~ .form-file-label,
+.custom-file-input:focus ~ .custom-file-label,
 .select2-container--default .select2-selection--single:focus,
 .select2-container--default.select2-container--focus .select2-selection--multiple {
-  box-shadow: 0 0 0 3px rgba(15, 172, 129, 0.1);
+  box-shadow: 0 0 0 3px rgba(101, 118, 255, 0.1);
 }
 
 .form-control-simple:focus {
@@ -381,10 +383,9 @@ a.bg-primary:hover, a.bg-primary:focus, button.bg-primary:hover, button.bg-prima
 .btn-outline-primary:not(:disabled):not(.disabled):active,
 .btn-outline-primary:not(:disabled):not(.disabled).active,
 .show > .btn-outline-primary.dropdown-toggle,
-.btn-primary.disabled, .btn-primary:disabled,
-.invest-amount-control:checked ~ .invest-amount-label {
-  background-color: #0fac81;
-  border-color: #0fac81;
+.btn-primary.disabled, .btn-primary:disabled {
+  background-color: #6576ff;
+  border-color: #6576ff;
 }
 
 .form-focus-none:focus {
@@ -394,18 +395,18 @@ a.bg-primary:hover, a.bg-primary:focus, button.bg-primary:hover, button.bg-prima
 
 @media (min-width: 992px) {
   .nk-menu-main > li > .nk-menu-link:before {
-    background: #0fac81;
+    background: #6576ff;
   }
   .is-theme .nk-menu-main > li > .nk-menu-link {
-    color: #abe2d3;
+    color: #c4cefe;
   }
   .is-theme .nk-menu-main > li > .nk-menu-link.nk-menu-toggle:after {
-    color: rgba(171, 226, 211, 0.7);
+    color: rgba(196, 206, 254, 0.7);
   }
 }
 .datepicker table tr td.today, .datepicker table tr td.today:hover, .datepicker table tr td.today.disabled, .datepicker table tr td.today.disabled:hover {
-  background-color: #dbf3ec;
-  color: #0fac81;
+  background-color: #e8eaff;
+  color: #6576ff;
 }
 
 .datepicker table tr td.today:hover, .datepicker table tr td.today:hover:hover,
@@ -418,7 +419,7 @@ a.bg-primary:hover, a.bg-primary:focus, button.bg-primary:hover, button.bg-prima
 .datepicker table tr td.today.disabled.disabled, .datepicker table tr td.today.disabled:hover.disabled,
 .datepicker table tr td.today[disabled], .datepicker table tr td.today:hover[disabled],
 .datepicker table tr td.today.disabled[disabled], .datepicker table tr td.today.disabled:hover[disabled] {
-  background-color: #72ceb5;
+  background-color: #7990fd;
 }
 
 .datepicker table tr td.active:active, .datepicker table tr td.active:hover:active,
@@ -426,7 +427,7 @@ a.bg-primary:hover, a.bg-primary:focus, button.bg-primary:hover, button.bg-prima
 .datepicker table tr td.active.active, .datepicker table tr td.active:hover.active,
 .datepicker table tr td.active.disabled.active, .datepicker table tr td.active.disabled:hover.active,
 .datepicker table tr td span:hover, .datepicker table tr td span.focused {
-  background-color: #0fac81;
+  background-color: #6576ff;
 }
 
 .code-tag {
@@ -438,18 +439,18 @@ a.bg-primary:hover, a.bg-primary:focus, button.bg-primary:hover, button.bg-prima
   color: #526484;
 }
 
-.nk-menu-badge, .nk-menu-main .nk-menu-sub .nk-menu-badge {
-  color: #57c5a7;
-  background-color: #e7f7f2;
+.nk-menu-badge {
+  color: #939fff;
+  background-color: #f0f1ff;
 }
 
 .is-theme .nk-sidebar-footer, .nk-apps-sidebar.is-theme, .is-theme .nk-sidebar-profile-fixed {
-  background: #064936;
-  border-color: #0a7859;
+  background: #29347a;
+  border-color: #3644a0;
 }
 
 .is-theme .nk-menu-footer .nk-menu-link, .is-theme .sub-text, .is-theme .lead-text span {
-  color: #abe2d3;
+  color: #c4cefe;
 }
 
 .nav-switch-s2 .nav-link:hover, .nav-switch-s2 .nav-link:focus {
@@ -464,58 +465,58 @@ a.bg-primary:hover, a.bg-primary:focus, button.bg-primary:hover, button.bg-prima
 .active .nk-ibx-menu-item .icon,
 .nk-reply-form-nav li a:hover,
 .nk-reply-form-input .toggle-opt:hover {
-  color: #0fac81;
+  color: #6576ff;
 }
 
 .nk-ibx-menu li.active {
-  background: #ecf8f5;
+  background: #f3f4ff;
 }
 
 .nk-fmg-menu li.active {
-  background: #ecf8f5;
+  background: #f3f4ff;
 }
 
 .nk-file-name .asterisk .icon, .nk-file-name-text a.title:hover,
 .nk-file-link:hover .title, .active .nk-fmg-menu-item .icon, .active .nk-fmg-menu-text {
-  color: #0fac81;
+  color: #6576ff;
 }
 
 .nk-files-view-list .nk-file.selected {
-  background-color: #e2f5f0;
+  background-color: #eff1ff;
 }
 
 .chat.is-me .chat-msg {
-  background-color: #0fac81;
+  background-color: #6576ff;
 }
 
 .kanban-add-task {
-  color: #0fac81;
+  color: #6576ff;
 }
 .kanban-add-task:hover {
-  background: #0fac81;
-  border-color: #0fac81;
+  background: #6576ff;
+  border-color: #6576ff;
 }
 
 .actions ul li a {
-  border-color: #0fac81;
-  background: #0fac81;
+  border-color: #6576ff;
+  background: #6576ff;
 }
 
 .nk-wizard-simple .steps ul li.done h5, .nk-wizard-simple .steps ul li.done .number, .nk-wizard-simple .steps ul li.current h5, .nk-wizard-simple .steps ul li.current .number {
-  color: #0fac81;
+  color: #6576ff;
 }
 
 .nk-wizard-simple .steps ul li:after {
-  background: #0fac81;
+  background: #6576ff;
 }
 
 .invoice-contact ul .icon, .invoice-desc .title, .invoice-bills .table th {
-  color: #0fac81;
+  color: #6576ff;
 }
 
 .product-gallery .slider-nav .slider-item.slick-current .thumb,
 .custom-control-pro.no-control .custom-control-input:checked ~ .custom-control-label,
 .custom-control-pro.no-control .custom-control-input:not(:disabled):active ~ .custom-control-label,
 .custom-control.color-control .custom-control-label:before {
-  border-color: #0fac81 !important;
+  border-color: #6576ff !important;
 }
