--- a/public/scss/_dashlite_variables.scss
+++ b/public/scss/_dashlite_variables.scss
@@ -52,19 +52,19 @@ $base-dim:  		mix($base-color,$white, 8%);
 $accent-100:        #f0eaff;
 $accent-200:        #e7dcff;
 $accent-300:        #d4c2ff;
-$accent-400:        #b695ff;
-$accent-500:        #9d72ff;
+$accent-400:        #ffb34f;//#b695ff;
+$accent-500:        #ffb34f;//#9d72ff;
 
-$accent-color:      #854fff;
+$accent-color:      #ffb34f;//#854fff; ////changé par moi 
 $accent-light:      $accent-300;
-$accent-dark:       #3a2272;
+$accent-dark:       #ffb34f;//#3a2272;
 $accent-dim:  	    #e3e7fe;
 
 
 $body-bg:			$lighter;
 $body-color:		$base-text;
 
-$link-color:        		$accent-500;
+$link-color:        		$orange;//$accent-500;
 $link-hover-color:  		darken($link-color, 10%);
 
 $shadow-color: 				$light-800;
